@@ -1,3 +1,8 @@
+2005-02-25  Dom Lachowicz <cinamod@hotmail.com>
+
+	* *: Get rid of deprecated stuff.
+	* configure.in: Bump version number
+	
 2005-02-25  Caleb Moore <c.moore@student.unsw.edu.au>
 
 	* rsvg-paint-server.c: more de-artification of the core
